# bibliometrics_app

./: .gitignore  README.md  bibloApp.py  pyproject.toml  test.ipynb
data/: Bibliometri - oversigt.xlsx  openalex_data.xlsx  openalex_data_long.xlsx  scopus.csv  scopus_data.xlsx  scopus_data_authors.xlsx
src/: bibloApp.py  get_data.py  test.py
