[tool.poetry]
name = "bibliometrics-app"
version = "0.1.0"
description = ""
authors = ["MLS <mls@damvad.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.1.0"
requests = "^2.31.0"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"
streamlit = "^1.26.0"
xlsxwriter = "^3.1.3"
stqdm = "^0.0.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
